# cosmo

chat/: .gitignore  README.md  app.py  chatbot.py  pyproject.toml  test_query.py
chat/static/: script.js  styles.css
chat/templates/: index.html
nordic-crawler/: README.md  pyproject.toml
nordic-crawler/nordic_crawler/: main.py
rag/: pyproject.toml
rag/data/test/: test.txt
rag/rag/: db.py  query.py  server.py  test.py  testserver.py  testtranslate.py
