[tool.poetry]
name = "chat"
version = "0.1.0"
description = "Norwegian Immigration Assistant Chatbot"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.0"
flask-cors = "^4.0.0"
requests = "^2.31.0"
pydantic = "^2.6.0"
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
