[project]
name = "nordic-crawler"
version = "0.1.0"
description = "Web crawler for Nordic immigration information using crawl4ai"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "crawl4ai>=0.4.0",
    "beautifulsoup4>=4.12.0",
    "langchain>=0.1.0",
    "pandas>=2.0.0",
    "langdetect (>=1.0.9,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
crawl = "nordic_crawler.main:main"
